# rust-keyword-counter

./: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  compose.yml  rustfmt.toml  test.ts
api-server/: Cargo.toml
api-server/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
shared-lib/: Cargo.toml
shared-lib/src/: dart.rs  golang.rs  javascript.rs  lib.rs  python.rs  ruby.rs  rust.rs
src/: javascript.rs  main.rs  python.rs  ruby.rs  rust.rs  typescript.rs
