[workspace]
resolver = "2"
members = [
    "cli",
    "api-server",
    "shared-lib"
]

[workspace.metadata.rust-analyzer]
rustfmt = { overrideCommand = ["rustfmt", "--edition=2021"] }

[workspace.dependencies]
keyword-analyzer-shared = { path = "shared-lib" }
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"