[package]
name = "keyword-analyzer-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
keyword-analyzer-shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
axum-test = "18.0.0-rc3"
tokio-test = "0.4.4"